--- a/main/static/css/style.css
+++ b/main/static/css/style.css
@@ -2,3 +2,14 @@
     width: 200px;
     height: 200px;
 }
+h1{
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
+p {
+    text-align: center;
+}
+
+
