--- a/main/templates/signup.html
+++ b/main/templates/signup.html
@@ -1,21 +1,37 @@
 {% extends 'layout.html' %}
 {% block content %}
-<h1>ユーザ登録</h1>
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-    {% for message in messages %}
-        {{ messages }}
-    {% endfor %}
-{% endif %}
-{% endwith %}
-<form action='/signup' method='POST' >
-    <label for="">ユーザネーム</label>
-    <input type="text" name="username">
-    <label for="">ユーザID</label>
-    <input type="text" name="login_user_id">
-    <label for="">パスワード</label>
-    <input type="password" name="password">
+<body  class="text-center" ></body>
 
-    <input class="btn btn-primary"type="submit" value="新規登録">
+<form action="/signup" method='POST'>
+  <img class="mb-4" src="{{url_for('static', filename ='imgs/sign_in/sign_in_page.png')}}" alt="" width="72" height="72">
+  <h2 class="h3 mb-3 font-weight-normal">サインアップ</h2>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    {{ messages[0] }}
+    {% endif %}
+    {% endwith %}
+  
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <label for="ユーザーネーム" >ユーザーネーム</label>
+                <input type="text" name="username" class="form-control" placeholder="山田タロウ1234" required autofocus>    
+            </div>
+        </div> 
+        <div class="row justify-content-center">
+            <div class="col-md-6">    
+                <label for="ユーザーID" >ユーザーID</label>
+                <input type="text" name="login_user_id" class="form-control" placeholder="exanmple1234" required autofocus>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6"> 
+                    <label for="inputPassword" class="sr-only">パスワード</label>
+                    <input type="password" name="password" class="form-control" placeholder="Password" required>
+            </div>
+        </div>      
+  <button class="btn btn-lg btn-primary btn-block" type="submit">サインアップ</button>
+
 </form>
+
 {% endblock %}
